# Owl

./: .gitignore  .gitignore.txt  CMakeLists.txt  CMakePresets.json  CMakeProject1.cpp  Owl.cpp  Owl.h  README.md  changelog.md
cmake/: FindMSUnitTestFramework.cmake
include/Owl/: Owl.hpp  Types.hpp
msil/: CMakeProject1.cpp
src/: Owl.cpp
test/: CMakeLists.txt  README.md
test/src/: owl_tests.hpp  test.cpp
test_cppUnitTestFramework/: CMakeLists.txt
test_cppUnitTestFramework/src/: test.cpp
test_manual/: CMakeLists.txt  README.md
